--- a/Lab6/pom.xml
+++ b/Lab6/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.38</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.2.140</version> <!-- ex: 1.2.140 -->
+        </dependency>
     </dependencies>
 </project>
